--- a/archetypes/slave/pom.xml
+++ b/archetypes/slave/pom.xml
@@ -18,18 +18,14 @@
 
     <parent>
         <groupId>com.sourcesense.solr</groupId>
-        <artifactId>solr-packager</artifactId>
+        <artifactId>solr-archetypes</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>solr-archetypes</artifactId>
-    <name>Solr Packager :: Archetypes</name>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>slave</module>
-    </modules>
+    <artifactId>solr-slave-archetype</artifactId>
+    <name>Solr Packager :: Resources :: Solr Slave Archetype</name>
+    <packaging>jar</packaging>
 
 </project>
