--- a/archetypes/multicore/pom.xml
+++ b/archetypes/multicore/pom.xml
@@ -25,7 +25,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>solr-multicore-archetype</artifactId>
-    <name>Solr Packager :: Resources :: Solr Master Archetype</name>
+    <name>Solr Packager :: Resources :: Solr Multicore Archetype</name>
     <packaging>jar</packaging>
 
 </project>
