added some useful properties to prod skeleton properties

--- a/archetypes/standalone/src/main/resources/archetype-resources/src/main/filters/prod.properties
+++ b/archetypes/standalone/src/main/resources/archetype-resources/src/main/filters/prod.properties
@@ -13,3 +13,8 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 #
+
+tomcat.connector.port=8080
+
+solr.data.dir.master=/tmp/master/indexes/
+solr.data.dir.slave=/tmp/slave/indexes/
