added solr.abortOnConfigurationError filtered property

--- a/archetypes/standalone/src/main/resources/archetype-resources/src/main/filters/prod.properties
+++ b/archetypes/standalone/src/main/resources/archetype-resources/src/main/filters/prod.properties
@@ -16,5 +16,6 @@
 
 tomcat.connector.port=8080
 
+solr.abortOnConfigurationError=true
 solr.data.dir.master=/tmp/master/indexes/
 solr.data.dir.slave=/tmp/slave/indexes/
