looks like ${basedir} is filtered by archetype plugin

--- a/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
@@ -117,8 +117,8 @@
                             <artifactId>maven-assembly-plugin</artifactId>
                             <configuration>
                                 <filters>
-                                    <filter>${basedir}/src/main/filters/prod.properties</filter>
-                                    <filter>${basedir}/src/main/filters/dev.properties</filter>
+                                    <filter>src/main/filters/prod.properties</filter>
+                                    <filter>src/main/filters/dev.properties</filter>
                                 </filters>
                             </configuration>
                         </plugin>
@@ -141,8 +141,8 @@
                             <artifactId>maven-assembly-plugin</artifactId>
                             <configuration>
                                 <filters>
-                                    <filter>${basedir}/src/main/filters/prod.properties</filter>
-                                    <filter>${basedir}/src/main/filters/staging.properties</filter>
+                                    <filter>src/main/filters/prod.properties</filter>
+                                    <filter>src/main/filters/staging.properties</filter>
                                 </filters>
                             </configuration>
                         </plugin>
@@ -165,8 +165,8 @@
                             <artifactId>maven-assembly-plugin</artifactId>
                             <configuration>
                                 <filters>
-                                    <filter>${basedir}/src/main/filters/prod.properties</filter>
-                                    <filter>${basedir}/src/main/filters/testing.properties</filter>
+                                    <filter>src/main/filters/prod.properties</filter>
+                                    <filter>src/main/filters/testing.properties</filter>
                                 </filters>
                             </configuration>
                         </plugin>
@@ -189,7 +189,7 @@
                             <artifactId>maven-assembly-plugin</artifactId>
                             <configuration>
                                 <filters>
-                                    <filter>${basedir}/src/main/filters/prod.properties</filter>
+                                    <filter>src/main/filters/prod.properties</filter>
                                 </filters>
                             </configuration>
                         </plugin>
