fixed solr-assemblies artifactId

--- a/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
@@ -42,7 +42,7 @@
                     <dependencies>
                         <dependency>
                             <groupId>com.sourcesense.solr</groupId>
-                            <artifactId>assemblies</artifactId>
+                            <artifactId>solr-assemblies</artifactId>
                             <version>${solrp.version}</version>
                         </dependency>
                     </dependencies>
