--- a/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
@@ -23,6 +23,7 @@
     <packaging>pom</packaging>
 
     <properties>
+        <replication>slave</replication>
         <tomcat.version>6.0.29</tomcat.version>
         <solr.version>1.4.1</solr.version>
         <slf4j.version>1.5.5</slf4j.version>
