--- a/archetypes/multicore/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/multicore/src/main/resources/archetype-resources/pom.xml
@@ -302,6 +302,23 @@
             <scope>provided</scope>
         </dependency>
         -->
+
+        <!--
+          | Missing slf4j stuff
+        -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
 </project>
