--- a/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
@@ -48,33 +48,44 @@
                     </dependencies>
                     <executions>
                         <execution>
-                            <id>package-solr</id>
-                            <phase>package</phase>
+                            <id>package-master-config</id>
+                            <phase>process-resources</phase>
                             <goals>
                                 <goal>single</goal>
                             </goals>
                             <configuration>
                                 <descriptorRefs>
-                                    <descriptorRef>bootstrap</descriptorRef>
                                     <descriptorRef>master-resources</descriptorRef>
-                                    <descriptorRef>master</descriptorRef>
-                                    <descriptorRef>slave</descriptorRef>
                                 </descriptorRefs>
                             </configuration>
                         </execution>
+
+                        <execution>
+                            <id>package-solr-tomcat</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                            <configuration>
+                                <attach>false</attach>
+                                <descriptorRefs>
+                                    <descriptorRef>bootstrap</descriptorRef>
+                                    <descriptorRef>master</descriptorRef>
+                                    <descriptorRef>slave</descriptorRef>
+                                </descriptorRefs>
+                                <archive>
+                                    <manifest>
+                                        <mainClass>org.apache.catalina.startup.Bootstrap</mainClass>
+                                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                                        <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                                    </manifest>
+                                    <manifestEntries>
+                                        <Class-Path>juli-${tomcat.version}.jar</Class-Path>
+                                    </manifestEntries>
+                                </archive>
+                            </configuration>
+                        </execution>
                     </executions>
-                    <configuration>
-                        <archive>
-                            <manifest>
-                                <mainClass>org.apache.catalina.startup.Bootstrap</mainClass>
-                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-                            </manifest>
-                            <manifestEntries>
-                                <Class-Path>juli-${tomcat.version}.jar</Class-Path>
-                            </manifestEntries>
-                        </archive>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
