--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 -->
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
+    <parent>
+        <groupId>com.sourcesense</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>1-SNAPSHOT</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sourcesense.solr</groupId>
     <artifactId>solr-packager</artifactId>
@@ -38,33 +44,15 @@
         <developerConnection>scm:git::git@github.com:sourcesense/solr-packager.git</developerConnection>
     </scm>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ssZ</maven.build.timestamp.format>
-        <implementation.build>${maven.build.timestamp}</implementation.build>
-    </properties>
-
     <build>
         <defaultGoal>install</defaultGoal>
 
         <plugins>
+            <!--
+             | inherited from parent pom
+            -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.3.1</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-                        </manifest>
-                        <manifestEntries>
-                            <Implementation-Build>${implementation.build}</Implementation-Build>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
             </plugin>
         </plugins>
 
