just the master host needs to be configured

--- a/archetypes/standalone/src/main/resources/archetype-resources/src/main/filters/prod.properties
+++ b/archetypes/standalone/src/main/resources/archetype-resources/src/main/filters/prod.properties
@@ -19,4 +19,4 @@ tomcat.connector.port=8080
 solr.abortOnConfigurationError=true
 solr.data.dir.master=/tmp/master/indexes/
 solr.data.dir.slave=/tmp/slave/indexes/
-solr.slave.masterUrl=http://localhost:8080/solr/replication
+${solr.slave.masterHost}=localhost
