--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.sourcesense</groupId>
         <artifactId>oss-parent</artifactId>
-        <version>1-SNAPSHOT</version>
+        <version>1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
