--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Standalone Apache Solr embedded in Tomcat</description>
+    <url>http://github.com/sourcesense/solr-packager</url>
 
     <licenses>
         <license>
