added clustering variable

--- a/archetypes/standalone/src/main/resources/archetype-resources/src/main/filters/prod.properties
+++ b/archetypes/standalone/src/main/resources/archetype-resources/src/main/filters/prod.properties
@@ -20,3 +20,4 @@ solr.abortOnConfigurationError=true
 solr.data.dir.master=/tmp/master/indexes/
 solr.data.dir.slave=/tmp/slave/indexes/
 solr.slave.masterHost=localhost
+solr.clustering.enabled=true
