--- a/archetypes/pom.xml
+++ b/archetypes/pom.xml
@@ -28,6 +28,25 @@
     <name>Solr Packager :: Archetypes</name>
     <packaging>pom</packaging>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-archetype-plugin</artifactId>
+                <version>2.0</version>
+                <extensions>true</extensions>
+            </plugin>
+        </plugins>
+
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.archetype</groupId>
+                <artifactId>archetype-packaging</artifactId>
+                <version>2.0</version>
+            </extension>
+        </extensions>
+    </build>
+
     <modules>
         <module>standalone</module>
         <module>multicore</module>
