--- a/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
@@ -26,7 +26,7 @@
         <tomcat.version>6.0.29</tomcat.version>
         <solr.version>1.4.1</solr.version>
         <slf4j.version>1.5.5</slf4j.version>
-        <solrp.version>1.0.0-SNAPSHOT</solrp.version>
+        <solrp.version>1.0.0</solrp.version>
         <webapp.description>${project.artifactId}-${environment} - v${project.version}</webapp.description>
     </properties>
 
