fixed environment variable for staging profile

--- a/archetypes/multicore/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/multicore/src/main/resources/archetype-resources/pom.xml
@@ -126,7 +126,7 @@
             <id>staging</id>
 
             <properties>
-                <environment>migration</environment>
+                <environment>staging</environment>
             </properties>
 
             <build>
