--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
         </plugins>
 
         <pluginManagement>
