--- a/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
@@ -23,11 +23,25 @@
     <packaging>pom</packaging>
 
     <properties>
+        <!--
+         | libraries version
+        -->
         <tomcat.version>6.0.29</tomcat.version>
         <solr.version>1.4.1</solr.version>
         <slf4j.version>1.5.5</slf4j.version>
         <solrp.version>1.0.0</solrp.version>
         <webapp.description>${project.artifactId}-${environment} - v${project.version}</webapp.description>
+
+        <!--
+         | common useful properties
+        -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <javac.src.version>1.5</javac.src.version>
+        <javac.target.version>1.5</javac.target.version>
+        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ssZ</maven.build.timestamp.format>
+        <implementation.build>${maven.build.timestamp}</implementation.build>
     </properties>
 
     <build>
@@ -93,6 +107,122 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.1.1</version>
+                <inherited>true</inherited>
+                <executions>
+                    <execution>
+                        <id>package-master-config</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>war</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>master</classifier>
+                            <webResources>
+                                <resource>
+                                    <directory>${basedir}/src/main/solr/master</directory>
+                                    <targetPath>/WEB-INF/classes</targetPath>
+                                </resource>
+
+                                <!--
+                                 | webResources is overridden so can't be moved in a common place
+                                -->
+                                <resource>
+                                    <directory>${project.build.directory}/resources/solr-webapp</directory>
+                                    <excludes>
+                                        <exclude>**/*.ico</exclude>
+                                        <exclude>**/web.xml</exclude>
+                                    </excludes>
+                                    <filtering>true</filtering>
+                                </resource>
+
+                                <resource>
+                                    <directory>${project.build.directory}/resources/solr-webapp</directory>
+                                    <includes>
+                                        <include>**/*.ico</include>
+                                    </includes>
+                                </resource>
+
+                                <resource>
+                                    <directory>${basedir}/src/main/solr/commons</directory>
+                                    <targetPath>/WEB-INF/classes</targetPath>
+                                </resource>
+
+                                <resource>
+                                    <directory>${project.build.directory}/resources/solr-commons</directory>
+                                    <targetPath>/WEB-INF/classes</targetPath>
+                                </resource>
+                            </webResources>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>package-slave-config</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>war</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>slave</classifier>
+                            <webResources>
+                                <resource>
+                                    <directory>${basedir}/src/main/solr/slave</directory>
+                                    <targetPath>/WEB-INF/classes</targetPath>
+                                </resource>
+
+                                <!--
+                                 | webResources is overridden so can't be moved in a common place
+                                -->
+                                <resource>
+                                    <directory>${project.build.directory}/resources/solr-webapp</directory>
+                                    <excludes>
+                                        <exclude>**/*.ico</exclude>
+                                        <exclude>**/web.xml</exclude>
+                                    </excludes>
+                                    <filtering>true</filtering>
+                                </resource>
+
+                                <resource>
+                                    <directory>${project.build.directory}/resources/solr-webapp</directory>
+                                    <includes>
+                                        <include>**/*.ico</include>
+                                    </includes>
+                                </resource>
+
+                                <resource>
+                                    <directory>${basedir}/src/main/solr/commons</directory>
+                                    <targetPath>/WEB-INF/classes</targetPath>
+                                </resource>
+
+                                <resource>
+                                    <directory>${project.build.directory}/resources/solr-commons</directory>
+                                    <targetPath>/WEB-INF/classes</targetPath>
+                                </resource>
+                            </webResources>
+                        </configuration>
+                    </execution>
+                </executions>
+
+                <configuration>
+                    <webXml>${project.build.directory}/resources/solr-webapp/WEB-INF/web.xml</webXml>
+
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                        </manifest>
+                        <manifestEntries>
+                            <Implementation-Build>${implementation.build}</Implementation-Build>
+                            <X-Compile-Source-JDK>${javac.src.version}</X-Compile-Source-JDK>
+                            <X-Compile-Target-JDK>${javac.target.version}</X-Compile-Target-JDK>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
@@ -121,6 +251,11 @@
             </properties>
 
             <build>
+                <filters>
+                    <filter>src/main/filters/prod.properties</filter>
+                    <filter>src/main/filters/dev.properties</filter>
+                </filters>
+
                 <plugins>
                     <plugin>
                         <artifactId>maven-assembly-plugin</artifactId>
@@ -139,10 +274,15 @@
             <id>staging</id>
 
             <properties>
-                <environment>migration</environment>
+                <environment>staging</environment>
             </properties>
 
             <build>
+                <filters>
+                    <filter>src/main/filters/prod.properties</filter>
+                    <filter>src/main/filters/staging.properties</filter>
+                </filters>
+
                 <plugins>
                     <plugin>
                         <artifactId>maven-assembly-plugin</artifactId>
@@ -165,6 +305,11 @@
             </properties>
 
             <build>
+                <filters>
+                    <filter>src/main/filters/prod.properties</filter>
+                    <filter>src/main/filters/testing.properties</filter>
+                </filters>
+
                 <plugins>
                     <plugin>
                         <artifactId>maven-assembly-plugin</artifactId>
@@ -187,6 +332,10 @@
             </properties>
 
             <build>
+                <filters>
+                    <filter>src/main/filters/prod.properties</filter>
+                </filters>
+
                 <plugins>
                     <plugin>
                         <artifactId>maven-assembly-plugin</artifactId>
