added missing filtering on slave/master configurations

--- a/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
@@ -108,6 +108,7 @@
                                 <resource>
                                     <directory>${basedir}/src/main/solr/master</directory>
                                     <targetPath>/WEB-INF/classes</targetPath>
+                                    <filtering>true</filtering>
                                 </resource>
 
                                 <!--
@@ -154,6 +155,7 @@
                                 <resource>
                                     <directory>${basedir}/src/main/solr/slave</directory>
                                     <targetPath>/WEB-INF/classes</targetPath>
+                                    <filtering>true</filtering>
                                 </resource>
 
                                 <!--
