added missing filter on solr/commons resources

--- a/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
@@ -133,6 +133,7 @@
                                 <resource>
                                     <directory>${basedir}/src/main/solr/commons</directory>
                                     <targetPath>/WEB-INF/classes</targetPath>
+                                    <filtering>true</filtering>
                                 </resource>
 
                                 <resource>
@@ -180,6 +181,7 @@
                                 <resource>
                                     <directory>${basedir}/src/main/solr/commons</directory>
                                     <targetPath>/WEB-INF/classes</targetPath>
+                                    <filtering>true</filtering>
                                 </resource>
 
                                 <resource>
