--- a/site/pom.xml
+++ b/site/pom.xml
@@ -47,8 +47,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-changes-plugin</artifactId>
                 <version>2.3</version>
+                <executions>
+                    <execution>
+                        <phase>site</phase>
+                        <goals>
+                            <goal>changes-report</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
+                    <issueLinkTemplate>%URL%/issues/%ISSUE%</issueLinkTemplate>
                     <reportSets>
                         <reportSet>
                             <reports>
