--- a/site/pom.xml
+++ b/site/pom.xml
@@ -43,30 +43,27 @@
                 <version>2.3.1</version>
             </plugin>
 
+        </plugins>
+    </build>
+
+    <reporting>
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-changes-plugin</artifactId>
-                <version>2.3</version>
-                <executions>
-                    <execution>
-                        <phase>site</phase>
-                        <goals>
-                            <goal>changes-report</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <version>2.4</version>
                 <configuration>
                     <issueLinkTemplate>%URL%/issues/%ISSUE%</issueLinkTemplate>
-                    <reportSets>
-                        <reportSet>
-                            <reports>
-                                <report>changes-report</report>
-                            </reports>
-                        </reportSet>
-                    </reportSets>
                 </configuration>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>changes-report</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
             </plugin>
         </plugins>
-    </build>
+    </reporting>
 
 </project>
