--- a/site/pom.xml
+++ b/site/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.sourcesense.solr</groupId>
         <artifactId>solr-packager</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
