Issue 5: Slave classifier doesn't get installed in M2 local repo

--- a/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/standalone/src/main/resources/archetype-resources/pom.xml
@@ -60,6 +60,19 @@
                         </execution>
 
                         <execution>
+                            <id>package-slave-config</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                            <configuration>
+                                <descriptorRefs>
+                                    <descriptorRef>slave-resources</descriptorRef>
+                                </descriptorRefs>
+                            </configuration>
+                        </execution>
+
+                        <execution>
                             <id>package-solr-tomcat</id>
                             <phase>package</phase>
                             <goals>
