--- a/archetypes/standalone/src/main/resources/archetype-resources/src/main/filters/prod.properties
+++ b/archetypes/standalone/src/main/resources/archetype-resources/src/main/filters/prod.properties
@@ -1,5 +1,7 @@
 tomcat.connector.port=8080
 
+solr.webapp.name=ROOT
+
 solr.abortOnConfigurationError=true
 solr.data.dir.master=/tmp/master/indexes/
 solr.data.dir.slave=/tmp/slave/indexes/
