--- a/archetypes/multicore/pom.xml
+++ b/archetypes/multicore/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.sourcesense.solr</groupId>
         <artifactId>solr-archetypes</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
