--- a/archetypes/multicore-tomcat/pom.xml
+++ b/archetypes/multicore-tomcat/pom.xml
@@ -24,8 +24,8 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>solr-multicore-archetype</artifactId>
-    <name>Solr Packager :: Archetypes :: Multicore</name>
+    <artifactId>solr-multicore-tomcat-archetype</artifactId>
+    <name>Solr Packager :: Archetypes :: Multicore Tomcat</name>
     <packaging>jar</packaging>
 
 </project>
