--- a/archetypes/standalone-tomcat/pom.xml
+++ b/archetypes/standalone-tomcat/pom.xml
@@ -24,8 +24,8 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>solr-standalone-archetype</artifactId>
-    <name>Solr Packager :: Archetypes :: Standalone</name>
+    <artifactId>solr-standalone-tomcat-archetype</artifactId>
+    <name>Solr Packager :: Archetypes :: Standalone Tomcat</name>
     <packaging>jar</packaging>
 
 </project>
